[project]
name = "PyCloudSim"
version = "1.0.7"
authors = [
  { name="Yifei Ren", email="ryf0510@live.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "bitmath",
    "networkx",
    "Akatosh<=2.3.3",
]

[project.urls]
"Homepage" = "https://ulfaric.github.io/PyCloudSim/"
"Bug Tracker" = "https://ulfaric.github.io/PyCloudSim/issues"

[tool.setuptools]
packages = ["PyCloudSim", "PyCloudSim.entity", "PyCloudSim.monitor", "PyCloudSim.scheduler"]